force-app/main/default/objects/CPQResetSetting__c/CPQResetSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>CPQResetSetting</label>
</CustomObject>