force-app/main/default/objects/CPQResetSetting__c/fields/hasNextRecords__c.field-meta.xml
<CustomField>
    <fullName>hasNextRecords__c</fullName>
    <label>hasNextRecords</label>
    <length>10</length>
    <type>Text</type>
</CustomField>