force-app/main/default/objects/CPQResetSetting__c/fields/OFFSET_LIMIT__c.field-meta.xml
<CustomField>
    <fullName>OFFSET_LIMIT__c</fullName>
    <label>OFFSET_LIMIT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>